--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
 	</div>
 
 	<div>
-		<a href="model?filename=eMotor_Explode&friendly-name=Motor Explode">
+		<a href="model?title=Motor%20Explode&src=../models-android/eMotor_Explode.glb&ios-src=../models-ios/eMotor_Explode.usdz&poster=../thumbnails/eMotor_Explode.jpg&alt=Motor%20Explode">
 			<img src="thumbnails/eMotor_Explode.jpg" alt="Motor Explode">
 		</a>
-		<a href="model?filename=eMotor_Explode&friendly-name=Motor Explode">
+		<a href="model?title=Motor%20Explode&src=../models-android/eMotor_Explode.glb&ios-src=../models-ios/eMotor_Explode.usdz&poster=../thumbnails/eMotor_Explode.jpg&alt=Motor%20Explode">
 			<img src="qrcodes/eMotor_Explode.png" alt="Motor Explode">
 		</a>
 	</div>
 
 	<div>
-		<a href="model?filename=eMotor_Inside&friendly-name=Motor Inside">
+		<a href="model?title=Motor%20Inside&src=../models-android/eMotor_Inside.glb&ios-src=../models-ios/eMotor_Inside.usdz&poster=../thumbnails/eMotor_Inside.jpg&alt=Motor%20Inside">
 			<img src="thumbnails/eMotor_Inside.jpg" alt="Motor Inside">
 		</a>
-		<a href="model?filename=eMotor_Inside&friendly-name=Motor Inside">
+		<a href="model?title=Motor%20Inside&src=../models-android/eMotor_Inside.glb&ios-src=../models-ios/eMotor_Inside.usdz&poster=../thumbnails/eMotor_Inside.jpg&alt=Motor%20Inside">
 			<img src="qrcodes/eMotor_Inside.png" alt="Motor Inside">
 		</a>
 	</div>
 
 	<div>
-		<a href="model?filename=Forklift&friendly-name=Forklift">
+		<a href="model?title=Forklift&src=../models-android/Forklift.glb&ios-src=../models-ios/Forklift.usdz&poster=../thumbnails/Forklift.jpg&alt=Forklift">
 			<img src="thumbnails/Forklift.jpg" alt="Forklift">
 		</a>
-		<a href="model?filename=Forklift&friendly-name=Forklift">
+		<a href="model?title=Forklift&src=../models-android/Forklift.glb&ios-src=../models-ios/Forklift.usdz&poster=../thumbnails/Forklift.jpg&alt=Forklift">
 			<img src="qrcodes/Forklift.png" alt="Forklift">
 		</a>
 	</div>
 
 	<div>
-		<a href="model?filename=Industrial_Lift&friendly-name=Industrial Lift">
+		<a href="model?title=Industrial%20Lift&src=../models-android/Industrial_Lift.glb&ios-src=../models-ios/Industrial_Lift.usdz&poster=../thumbnails/Industrial_Lift.jpg&alt=Industrial%20Lift">
 			<img src="thumbnails/Industrial_Lift.jpg" alt="Industrial Lift">
 		</a>
-		<a href="model?filename=Industrial_Lift&friendly-name=Industrial Lift">
+		<a href="model?title=Industrial%20Lift&src=../models-android/Industrial_Lift.glb&ios-src=../models-ios/Industrial_Lift.usdz&poster=../thumbnails/Industrial_Lift.jpg&alt=Industrial%20Lift">
 			<img src="qrcodes/Industrial_Lift.png" alt="Industrial Lift">
 		</a>
 	</div>
 
 	<div>
-		<a href="model?filename=Bizzcom_Palette&friendly-name=Bizzcom Palette">
+		<a href="model?title=Bizzcom%20Palette&src=../models-android/Bizzcom_Palette.glb&ios-src=../models-ios/Bizzcom_Palette.usdz&poster=../thumbnails/Bizzcom_Palette.jpg&alt=Bizzcom%20Palette">
 			<img src="qrcodes/Bizzcom_Palette.png" alt="Bizzcom Palette">
 		</a>
 	</div>
