--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</div>
 
 	<!--div>
-		<a href="model?title=Bizzcom%20Palette&src=../models-android/Bizzcom_Palette.glb&ios-src=../models-ios/Bizzcom_Palette.usdz&poster=../thumbnails/Bizzcom_Palette.jpg&alt=Bizzcom%20Palette">
+		<a href="model?title=Bizzcom%20Palette&src=../models-android/Bizzcom_Palette.glb&ios-src=../models-ios/Bizzcom_Palette.usdz&alt=Bizzcom%20Palette">
 			<img src="qrcodes/Bizzcom_Palette.png" alt="Bizzcom Palette">
 		</a>
 	</div-->
