--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 		</a>
 	</div>
 
-	<div>
+	<!--div>
 		<a href="model?title=Bizzcom%20Palette&src=models-android/Bizzcom_Palette.glb&ios-src=models-ios/Bizzcom_Palette.usdz&alt=Bizzcom%20Palette">
 			<img src="qrcodes/Bizzcom_Palette.png" alt="Bizzcom Palette">
 		</a>
-	</div>
+	</div-->
 </body>
 </html>
